# challente-SPOT

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 9b460d60b322_.py
api/routes/: __init__.py  routes.py
app/: main.py
app/api/routes/: __init__.py  routes.py
app/db/: alembic.ini
core/config/: azure_conection.py
core/services/: azureconect.py
db/: conect_db.py  migrations.py
domain/models/: message.py
domain/schemas/: message.py
tests/: test_routes.py
